# ods-rs

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
src/: dice.rs  dice_total.rs  die.rs  lib.rs  main.rs  rollable.rs
tests/: readme.rs
