[package]
name = "one-d-six"
version = "0.1.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Library for rolling some dice"
readme = "README.md"
keywords = ["dice"]
repository = "https://github.com/spenserblack/one-d-six-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
num = "0.2"
rand = "0.7"
