[package]
name = "one-d-six"
version = "0.5.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Library for rolling some dice"
readme = "README.md"
keywords = ["dice"]
categories = ["command-line-utilities"]
repository = "https://github.com/spenserblack/one-d-six-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rand = "0.7"

[badges]
is-it-maintained-issue-resolution = { repository = "spenserblack/one-d-six-rs" }
is-it-maintained-open-issues = { repository = "spenserblack/one-d-six-rs" }
maintenance = { status = "passively-maintained" }
